--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+s3.environment.AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
+s3.environment.AWS_REGION=us-west-1
+s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
+s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
+s3.environment.IMAGE_FOLDER=group3-image
 
