update eruka server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ s3.environment.AWS_REGION=us-west-1
 s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
-
+eureka.client.service-url.default-zone=http://ec2-3-15-39-28.us-east-2.compute.amazonaws.com:8761/
