--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+spring.application.name=ess-upload-s3
+
 s3.environment.AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
 s3.environment.AWS_REGION=us-west-1
 s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
-eureka.client.service-url.default-zone=http://ec2-3-15-39-28.us-east-2.compute.amazonaws.com:8761/
+
+eureka.client.service-url.default-zone=${API_GETAWAY}
+spring.servlet.multipart.max-file-size=5MB
