update config eruka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
 
-eureka.client.service-url.default-zone=${API_GETAWAY}
+eureka.client.service-url.defaultZone=${API_GETAWAY}
 spring.servlet.multipart.max-file-size=5MB
