--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,6 +6,6 @@ s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
 
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
-#eureka.client.service-url.default-zone=${API_GETAWAY}
+#eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=${API_GETAWAY}
 spring.servlet.multipart.max-file-size=5MB
