update eureka config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=ess-upload-s3
+spring.application.name=ess-upload-service
 
 s3.environment.AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
 s3.environment.AWS_REGION=us-west-1
@@ -6,6 +6,6 @@ s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
 
-#eureka.client.service-url.defaultZone = http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=${API_GETAWAY}
-spring.servlet.multipart.max-file-size=5MB
+eureka.instance.non-secure-port=80
+eureka.instance.hostname=upload-service-ess.herokuapp.com
