--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ess-upload-s3
+spring.application.name=ess-upload-service
 
 s3.environment.AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
 s3.environment.AWS_REGION=us-west-1
@@ -7,4 +7,5 @@ s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
 
 eureka.client.service-url.defaultZone=${API_GETAWAY}
-spring.servlet.multipart.max-file-size=5MB
+eureka.instance.non-secure-port=80
+eureka.instance.hostname=upload-service-ess.herokuapp.com
