--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=ess-upload-service
+spring.application.name=upload-service
 
 s3.environment.AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
 s3.environment.AWS_REGION=us-west-1
@@ -6,6 +6,12 @@ s3.environment.AWS_SECRET_KEY=${AWS_SECRET_KEY}
 s3.environment.BUCKET=elasticbeanstalk-us-west-1-425277212426
 s3.environment.IMAGE_FOLDER=group3-image
 
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 10MB
+
 eureka.client.service-url.defaultZone=${API_GETAWAY}
 eureka.instance.non-secure-port=80
 eureka.instance.hostname=upload-service-ess.herokuapp.com
+
+spring.zipkin.base-url = http://ec2-18-219-187-203.us-east-2.compute.amazonaws.com:9411/
+spring.sleuth.sampler.probability=1.0
