--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,7 @@ s3.environment.IMAGE_FOLDER=group3-image
 
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 10MB
+multipart.enabled=true
 
 eureka.client.service-url.defaultZone=${API_GETAWAY}
 eureka.instance.non-secure-port=80
